--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartcollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="43043-101">工作表中的所有 chart 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="43043-101">A collection of all the chart objects on a worksheet.</span></span>
+      工作表中的所有 chart 对象的集合。
 
-      <span data-ttu-id="43043-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43043-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartCollectionLoadOptions
     fullName: Excel.Interfaces.ChartCollectionLoadOptions
     langs:
@@ -29,7 +29,7 @@ items:
       - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#width:member'
       - 'excel!Excel.Interfaces.ChartCollectionLoadOptions#worksheet:member'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#$all:member'
-    summary: '<span data-ttu-id="43043-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="43043-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="43043-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="43043-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="43043-105">).</span><span class="sxs-lookup"><span data-stu-id="43043-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -42,9 +42,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#axes:member'
     summary: |-
-      <span data-ttu-id="43043-106">对于集合中的每一项：表示图表坐标轴。</span><span class="sxs-lookup"><span data-stu-id="43043-106">For EACH ITEM in the collection: Represents chart axes.</span></span>
+      对于集合中的每一项：表示图表坐标轴。
 
-      <span data-ttu-id="43043-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43043-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axes
     fullName: axes
     langs:
@@ -57,9 +57,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAxesLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#chartType:member'
     summary: |-
-      <span data-ttu-id="43043-108">对于集合中的每一项：代表图表的类型。</span><span class="sxs-lookup"><span data-stu-id="43043-108">For EACH ITEM in the collection: Represents the type of the chart.</span></span> <span data-ttu-id="43043-109">有关详细信息，请参阅 ChartType。</span><span class="sxs-lookup"><span data-stu-id="43043-109">See Excel.ChartType for details.</span></span>
+      对于集合中的每一项：指定图表的类型。 有关详细信息，请参阅 ChartType。
 
-      <span data-ttu-id="43043-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43043-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: chartType
     fullName: chartType
     langs:
@@ -72,9 +72,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#dataLabels:member'
     summary: |-
-      <span data-ttu-id="43043-111">对于集合中的每一项：代表图表上的 datalabels。</span><span class="sxs-lookup"><span data-stu-id="43043-111">For EACH ITEM in the collection: Represents the datalabels on the chart.</span></span>
+      对于集合中的每一项：代表图表上的 datalabels。
 
-      <span data-ttu-id="43043-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43043-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataLabels
     fullName: dataLabels
     langs:
@@ -87,9 +87,9 @@ items:
           - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="43043-113">对于集合中的每一项：封装图表区域的格式属性。</span><span class="sxs-lookup"><span data-stu-id="43043-113">For EACH ITEM in the collection: Encapsulates the format properties for the chart area.</span></span>
+      对于集合中的每一项：封装图表区域的格式属性。
 
-      <span data-ttu-id="43043-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43043-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -102,9 +102,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#height:member'
     summary: |-
-      <span data-ttu-id="43043-115">对于集合中的每一项：代表图表对象的高度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="43043-115">For EACH ITEM in the collection: Represents the height, in points, of the chart object.</span></span>
+      对于集合中的每一项：指定 chart 对象的高度（以磅为单位）。
 
-      <span data-ttu-id="43043-116">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43043-116">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -117,9 +117,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="43043-117">对于集合中的每一项：图表的唯一 id。</span><span class="sxs-lookup"><span data-stu-id="43043-117">For EACH ITEM in the collection: The unique id of chart.</span></span> <span data-ttu-id="43043-118">只读。</span><span class="sxs-lookup"><span data-stu-id="43043-118">Read-only.</span></span>
+      对于集合中的每一项：图表的唯一 id。
 
-      <span data-ttu-id="43043-119">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43043-119">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -132,9 +132,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#left:member'
     summary: |-
-      <span data-ttu-id="43043-120">对于集合中的每一项：从图表左侧到工作表原点的距离（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="43043-120">For EACH ITEM in the collection: The distance, in points, from the left side of the chart to the worksheet origin.</span></span>
+      对于集合中的每一项：从图表左侧到工作表原点的距离（以磅为单位）。
 
-      <span data-ttu-id="43043-121">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43043-121">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -147,9 +147,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#legend:member'
     summary: |-
-      <span data-ttu-id="43043-122">对于集合中的每一项：代表图表的图例。</span><span class="sxs-lookup"><span data-stu-id="43043-122">For EACH ITEM in the collection: Represents the legend for the chart.</span></span>
+      对于集合中的每一项：代表图表的图例。
 
-      <span data-ttu-id="43043-123">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43043-123">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: legend
     fullName: legend
     langs:
@@ -162,9 +162,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="43043-124">对于集合中的每一项：代表 chart 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="43043-124">For EACH ITEM in the collection: Represents the name of a chart object.</span></span>
+      对于集合中的每一项：指定 chart 对象的名称。
 
-      <span data-ttu-id="43043-125">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43043-125">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -177,9 +177,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#series:member'
     summary: |-
-      <span data-ttu-id="43043-126">对于集合中的每一项：代表图表中的单个系列或系列集合。</span><span class="sxs-lookup"><span data-stu-id="43043-126">For EACH ITEM in the collection: Represents either a single series or collection of series in the chart.</span></span>
+      对于集合中的每一项：代表图表中的单个系列或系列集合。
 
-      <span data-ttu-id="43043-127">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43043-127">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: series
     fullName: series
     langs:
@@ -192,9 +192,9 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#showAllFieldButtons:member'
     summary: |-
-      <span data-ttu-id="43043-128">对于集合中的每一项：表示是否在数据透视图上显示所有字段按钮。</span><span class="sxs-lookup"><span data-stu-id="43043-128">For EACH ITEM in the collection: Represents whether to display all field buttons on a PivotChart.</span></span>
+      对于集合中的每一项：指定是否在数据透视图上显示所有字段按钮。
 
-      <span data-ttu-id="43043-129">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43043-129">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAllFieldButtons
     fullName: showAllFieldButtons
     langs:
@@ -207,9 +207,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#title:member'
     summary: |-
-      <span data-ttu-id="43043-130">对于集合中的每一项：代表指定图表的标题，包括标题的文本、可见性、位置和格式。</span><span class="sxs-lookup"><span data-stu-id="43043-130">For EACH ITEM in the collection: Represents the title of the specified chart, including the text, visibility, position, and formatting of the title.</span></span>
+      对于集合中的每一项：指定指定图表的标题，包括标题的文本、可见性、位置和格式。
 
-      <span data-ttu-id="43043-131">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43043-131">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
     fullName: title
     langs:
@@ -222,9 +222,9 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#top:member'
     summary: |-
-      <span data-ttu-id="43043-132">对于集合中的每一项：代表从对象的上边缘到工作表第1行顶部的距离，或图表上的图表区顶部的距离（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="43043-132">For EACH ITEM in the collection: Represents the distance, in points, from the top edge of the object to the top of row 1 (on a worksheet) or the top of the chart area (on a chart).</span></span>
+      对于集合中的每一项：指定从对象的上边缘到工作表上的第1行顶部或图表上的图表区顶部的距离（以磅为单位）。
 
-      <span data-ttu-id="43043-133">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43043-133">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -237,9 +237,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#width:member'
     summary: |-
-      <span data-ttu-id="43043-134">对于集合中的每一项：代表 chart 对象的宽度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="43043-134">For EACH ITEM in the collection: Represents the width, in points, of the chart object.</span></span>
+      对于集合中的每一项：指定 chart 对象的宽度（以磅为单位）。
 
-      <span data-ttu-id="43043-135">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43043-135">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
@@ -252,9 +252,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#worksheet:member'
     summary: |-
-      <span data-ttu-id="43043-136">对于集合中的每一项：包含当前图表的工作表。</span><span class="sxs-lookup"><span data-stu-id="43043-136">For EACH ITEM in the collection: The worksheet containing the current chart.</span></span>
+      对于集合中的每一项：包含当前图表的工作表。
 
-      <span data-ttu-id="43043-137">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43043-137">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheet
     fullName: worksheet
     langs:
