--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartgridlinesloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartgridlinesloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartGridlinesLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="c625f-101">代表图表坐标轴的主要或次要网格线。</span><span class="sxs-lookup"><span data-stu-id="c625f-101">Represents major or minor gridlines on a chart axis.</span></span>
+      代表图表坐标轴的主要或次要网格线。
 
-      <span data-ttu-id="c625f-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c625f-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartGridlinesLoadOptions
     fullName: Excel.Interfaces.ChartGridlinesLoadOptions
     langs:
@@ -16,7 +16,7 @@ items:
       - 'excel!Excel.Interfaces.ChartGridlinesLoadOptions#format:member'
       - 'excel!Excel.Interfaces.ChartGridlinesLoadOptions#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartGridlinesLoadOptions#$all:member'
-    summary: '<span data-ttu-id="c625f-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="c625f-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="c625f-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="c625f-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="c625f-105">).</span><span class="sxs-lookup"><span data-stu-id="c625f-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartGridlinesLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="c625f-106">表示图表网格线的格式。</span><span class="sxs-lookup"><span data-stu-id="c625f-106">Represents the formatting of chart gridlines.</span></span>
+      表示图表网格线的格式。
 
-      <span data-ttu-id="c625f-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c625f-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -44,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.ChartGridlinesFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartGridlinesLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="c625f-108">表示坐标轴网格线是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="c625f-108">Boolean value representing if the axis gridlines are visible or not.</span></span>
+      指定轴网格线是否可见。
 
-      <span data-ttu-id="c625f-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c625f-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
